--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,6 @@
 {
 	"name": "lh/core",
 	"description": "The core of any web-project by Lowie Huyghe",
-	"require": {
-		"laravel/framework": "^5.0"
-	},
 	"license": "http://lowiehuyghe.com/license",
 	"authors": [
 		{
@@ -11,6 +8,13 @@
 			"email": "iam@lowiehuyghe.com"
 		}
 	],
+	"require": {
+		"laravel/framework": "^5.0",
+		"joetannenbaum/phpushbullet": "~1.0"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "4.7.*"
+	},
 	"autoload": {
 		"psr-4": {
 			"LH\\Core\\": "src/Core/"
