--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
-/vendor/
-/.idea/
+/vendor
+/node_modules
+.env
+.idea
+
+/app
+/bootstrap
+/config
+/database
+/public
+/resources
+/storage
+/tests
+.env.example
+.gitattributes
+artisan
+gulpfile.js
+package.json
+phpspec.yml
+phpunit.xml
+readme.md
+server.php
 composer.lock
