--- a/composer.json
+++ b/composer.json
@@ -2,22 +2,56 @@
 	"name": "lh/core",
 	"description": "The core of any web-project by Lowie Huyghe",
 	"license": "http://lowiehuyghe.com/license",
+	"keywords": ["core", "package", "Lowie", "Huyghe"],
 	"authors": [
 		{
 			"name": "Lowie Huyghe",
 			"email": "iam@lowiehuyghe.com"
 		}
 	],
-	"require": {
-		"laravel/framework": "^5.0",
+    "require": {
+        "php": ">=5.5.9",
+        "laravel/framework": "5.1.*",
 		"joetannenbaum/phpushbullet": "~1.0"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "4.7.*"
-	},
-	"autoload": {
+    },
+    "require-dev": {
+        "fzaninotto/faker": "~1.4",
+        "mockery/mockery": "0.9.*",
+        "phpunit/phpunit": "~4.0",
+        "phpspec/phpspec": "~2.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "LH\\Core\\": "src/Core"
+        }
+    },
+    "autoload-dev": {
+		"classmap": [
+			"database"
+		],
 		"psr-4": {
-			"LH\\Core\\": "src/Core/"
+			"App\\": "app/"
 		}
-	}
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize"
+        ],
+        "post-update-cmd": [
+            "php artisan clear-compiled",
+            "php artisan optimize"
+        ],
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "php artisan key:generate"
+        ]
+    },
+    "config": {
+        "preferred-install": "dist"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
