--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-		"joetannenbaum/phpushbullet": "~1.0"
+		"joetannenbaum/phpushbullet": "~1.0",
+		"gabrielbull/browser": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
