--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-		"joetannenbaum/phpushbullet": "~1.0",
-		"gabrielbull/browser": "dev-master"
+		"joetannenbaum/phpushbullet": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
