--- a/composer.json
+++ b/composer.json
@@ -9,50 +9,51 @@
 			"email": "iam@lowiehuyghe.com"
 		}
 	],
-    "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-		"joetannenbaum/phpushbullet": "~1.0"
-    },
-    "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
+	"require": {
+		"php": ">=5.5.9",
+		"laravel/framework": "5.1.*",
+		"joetannenbaum/phpushbullet": "~1.0",
+		"cbschuld/browser.php": "*"
+	},
+	"require-dev": {
+		"fzaninotto/faker": "~1.4",
+		"mockery/mockery": "0.9.*",
+		"phpunit/phpunit": "~4.0",
+		"phpspec/phpspec": "~2.1",
 		"illuminate/html": "5.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "LH\\Core\\": "src/Core"
-        }
-    },
-    "autoload-dev": {
+	},
+	"autoload": {
+		"psr-4": {
+			"LH\\Core\\": "src/Core"
+		}
+	},
+	"autoload-dev": {
 		"classmap": [
 			"database"
 		],
 		"psr-4": {
 			"App\\": "app/"
 		}
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "post-root-package-install": [
-            "php -r \"copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "php artisan key:generate"
-        ]
-    },
-    "config": {
-        "preferred-install": "dist"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+	},
+	"scripts": {
+		"post-install-cmd": [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-update-cmd": [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-root-package-install": [
+			"php -r \"copy('.env.example', '.env');\""
+		],
+		"post-create-project-cmd": [
+			"php artisan key:generate"
+		]
+	},
+	"config": {
+		"preferred-install": "dist"
+	},
+	"minimum-stability": "dev",
+	"prefer-stable": true
 }
