--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"php": ">=5.5.9",
 		"laravel/framework": "5.1.*",
 		"joetannenbaum/phpushbullet": "~1.0",
-		"cbschuld/browser.php": "*"
+		"cbschuld/browser.php": "*",
+		"geoip2/geoip2": "~2.0"
 	},
 	"require-dev": {
 		"fzaninotto/faker": "~1.4",
