--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"laravel/framework": "5.1.*",
 		"joetannenbaum/phpushbullet": "~1.0",
 		"cbschuld/browser.php": "*",
-		"geoip2/geoip2": "~2.0"
+		"geoip2/geoip2": "~2.0",
+		"piwik/piwik-php-tracker": "*"
 	},
 	"require-dev": {
 		"fzaninotto/faker": "~1.4",
