--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,26 @@
 {
 	"name": "lh/core",
 	"description": "The core of any web-project by Lowie Huyghe",
-	"license": "http://lowiehuyghe.com/license",
 	"keywords": ["core", "package", "Lowie", "Huyghe"],
+	"license": "http://lowiehuyghe.com/license",
 	"authors": [
 		{
 			"name": "Lowie Huyghe",
 			"email": "iam@lowiehuyghe.com"
 		}
 	],
+	"type": "library",
 	"require": {
 		"php": ">=5.5.9",
-		"laravel/framework": "5.1.*",
+		"laravel/lumen-framework": "5.1.*",
+		"vlucas/phpdotenv": "~1.0",
 		"joetannenbaum/phpushbullet": "~1.0",
-		"cbschuld/browser.php": "*",
-		"geoip2/geoip2": "~2.0",
-		"piwik/piwik-php-tracker": "*"
+		"cbschuld/browser.php": "*@dev",
+		"geoip2/geoip2": "~2.0"
 	},
 	"require-dev": {
-		"fzaninotto/faker": "~1.4",
-		"mockery/mockery": "0.9.*",
 		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1",
-		"illuminate/html": "5.*"
+		"fzaninotto/faker": "~1.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -30,32 +28,15 @@
 		}
 	},
 	"autoload-dev": {
-		"classmap": [
-			"database"
-		],
 		"psr-4": {
 			"App\\": "app/"
-		}
-	},
-	"scripts": {
-		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-root-package-install": [
-			"php -r \"copy('.env.example', '.env');\""
-		],
-		"post-create-project-cmd": [
-			"php artisan key:generate"
+		},
+		"classmap": [
+			"tests/",
+			"database/"
 		]
 	},
 	"config": {
 		"preferred-install": "dist"
-	},
-	"minimum-stability": "dev",
-	"prefer-stable": true
+	}
 }
