--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
 	"autoload": {
 		"psr-4": {
 			"Core\\": "src/Core"
-		}
+		},
+		"files": [
+			"src/helpers.php"
+		]
 	},
 	"autoload-dev": {
 		"psr-4": {
