#60: Added token-authentication for api's.

--- a/src/.env
+++ b/src/.env
@@ -6,3 +6,6 @@ CORE_ADMIN_PM_PUSHBULLET_ACCOUNT=huyghe.lowie@gmail.com
 CORE_ADMIN_PM_PUSHBULLET_TOKEN=zqUrdQVluN9jqFTwzB3wRu6bTMGoXf0h
 
 CORE_ANALYTICS_DRIVER=googleanalytics
+
+CORE_AUTH_PASSWORDRESET_TTL=15
+CORE_AUTH_AUTHTOKEN_TTL=24
