--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 		"vlucas/phpdotenv": "~1.0",
 		"joetannenbaum/phpushbullet": "~1.0",
 		"cbschuld/browser.php": "*@dev",
-		"geoip2/geoip2": "~2.0"
+		"geoip2/geoip2": "~2.0",
+		"pda/pheanstalk": "~3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
