#64: Added support for Slack. Pushbullet removed.

--- a/src/.env
+++ b/src/.env
@@ -1,9 +1,12 @@
 
 CORE_CONFIG_REQUIRED=APP_NAME,APP_KEY,APP_CIPHER,APP_LOCALE,APP_FALLBACK_LOCALE,ROUTING_NAMESPACE,ROUTING_DEFAULTCONTROLLER,ROUTING_HOMECONTROLLER,ROUTING_LOGINROUTE,ANALYTICS_GOOGLE_VERSION,ANALYTICS_GOOGLE_TRACKINGID
 
-CORE_ADMIN_PM_DRIVER=pushbullet
-CORE_ADMIN_PM_PUSHBULLET_ACCOUNT=huyghe.lowie@gmail.com
-CORE_ADMIN_PM_PUSHBULLET_TOKEN=zqUrdQVluN9jqFTwzB3wRu6bTMGoXf0h
+CORE_ADMIN_PM_DRIVER=slack
+CORE_ADMIN_PM_SLACK_HOOK=https://hooks.slack.com/services/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
+CORE_ADMIN_PM_SLACK_ICON=:sheep:
+CORE_ADMIN_PM_SLACK_CHANNEL_INFO=#dev-info
+CORE_ADMIN_PM_SLACK_CHANNEL_WARNING=#dev-warning
+CORE_ADMIN_PM_SLACK_CHANNEL_ERROR=#dev-error
 
 CORE_ANALYTICS_DRIVER=googleanalytics
 
