--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
 		"php": ">=5.5.9",
 		"laravel/lumen-framework": "5.1.*",
 		"vlucas/phpdotenv": "~1.0",
-		"joetannenbaum/phpushbullet": "~1.0",
 		"cbschuld/browser.php": "*@dev",
 		"geoip2/geoip2": "~2.0",
-		"pda/pheanstalk": "~3.0"
+		"pda/pheanstalk": "~3.0",
+		"maknz/slack": "~1.7"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
