--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 		"geoip2/geoip2": "~2.0",
 		"pda/pheanstalk": "~3.0",
 		"maknz/slack": "~1.7",
-		"anahkiasen/former": "4.0.*@dev"
+		"anahkiasen/former": "4.0.*@dev",
+		"SobanVuex/php-newrelic": "~2@rc"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
