--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
 		"geoip2/geoip2": "~2.0",
 		"pda/pheanstalk": "~3.0",
 		"maknz/slack": "~1.7",
-		"anahkiasen/former": "4.0.*",
-		"SobanVuex/php-newrelic": "~2@rc"
+		"anahkiasen/former": "4.0.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
