--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,12 @@
 		"vlucas/phpdotenv": "~1.0",
 		"piwik/device-detector": "3.5.*",
 		"geoip2/geoip2": "~2.0",
-		"pda/pheanstalk": "~3.0",
 		"maknz/slack": "~1.7",
-		"anahkiasen/former": "4.0.*"
+		"anahkiasen/former": "4.0.*",
+		"fzaninotto/faker": "~1.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.0",
-		"fzaninotto/faker": "~1.0"
+		"phpunit/phpunit": "~4.0"
 	},
 	"autoload": {
 		"psr-4": {
