--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
 	"require": {
 		"php": ">=5.5.9",
 		"laravel/lumen-framework": "5.2.*",
+		"illuminate/session": "5.2.*",
+		"illuminate/cookie": "5.2.*",
 		"vlucas/phpdotenv": "~2.2",
 		"piwik/device-detector": "3.5.*",
 		"geoip2/geoip2": "~2.0",
