--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
 	},
 	"autoload-dev": {
 		"psr-4": {
-			"App\\": "app/"
+			"App\\": "app/",
+			"CoreTest\\": "tests/Core"
 		},
 		"classmap": [
 			"tests/",
