--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
 		"laravel/lumen-framework": "5.2.*",
 		"illuminate/session": "5.2.*",
 		"illuminate/cookie": "5.2.*",
+		"illuminate/filesystem": "5.2.*",
+		"league/flysystem": "~1.0",
 		"vlucas/phpdotenv": "~2.2",
 		"piwik/device-detector": "3.5.*",
 		"geoip2/geoip2": "~2.0",
