--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
 		"geoip2/geoip2": "~2.0",
 		"maknz/slack": "~1.7",
 		"anahkiasen/former": "4.0.*",
-		"fzaninotto/faker": "~1.4"
+		"fzaninotto/faker": "~1.4",
+		"pusher/pusher-php-server": "~2.0",
+		"predis/predis": "~1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0"
