#105: Updated the license in composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "lh/edmunds",
 	"description": "The fast PHP framework for building web applications.",
 	"keywords": ["edmunds", "framework", "core", "package", "php"],
-	"license": "http://lowiehuyghe.com/license",
+	"license": "This file is subject to the terms and conditions defined in file 'license.md', which is part of this source code package.",
 	"authors": [
 		{
 			"name": "Lowie Huyghe",
