--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,18 @@
 	"name": "lh/edmunds",
 	"description": "The fast PHP framework for building web applications.",
 	"keywords": ["edmunds", "framework", "core", "package", "php"],
-	"license": "This file is subject to the terms and conditions defined in file 'license.md', which is part of this source code package.",
+	"type": "library",
 	"authors": [
 		{
 			"name": "Lowie Huyghe",
 			"email": "iam@lowiehuyghe.com"
 		}
 	],
-	"type": "library",
-	"require": {
+
+	"license": "SEE LICENSE IN license.md",
+
+	"require":
+	{
 		"php": ">=5.5.9",
 		"laravel/lumen-framework": "5.2.*",
 		"illuminate/session": "5.2.*",
@@ -28,20 +31,27 @@
 		"pusher/pusher-php-server": "~2.0",
 		"predis/predis": "~1.0"
 	},
-	"require-dev": {
+	"require-dev":
+	{
 		"phpunit/phpunit": "~4.0"
 	},
-	"autoload": {
-		"psr-4": {
+
+	"autoload":
+	{
+		"psr-4":
+		{
 			"Edmunds\\": "src/Edmunds"
 		}
 	},
-	"autoload-dev": {
-		"psr-4": {
+	"autoload-dev":
+	{
+		"psr-4":
+		{
 			"App\\": "app/",
 			"EdmundsTest\\": "tests/Edmunds"
 		},
-		"classmap": [
+		"classmap":
+		[
 			"tests/",
 			"database/"
 		]
