--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 		"illuminate/mail": "5.2.*",
 		"guzzlehttp/guzzle": "~5.3|~6.0",
 		"league/flysystem": "~1.0",
+		"league/flysystem-aws-s3-v2": "~1.0",
 		"vlucas/phpdotenv": "~2.2",
 		"piwik/device-detector": "3.5.*",
 		"geoip2/geoip2": "~2.0",
