--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
 		"anahkiasen/former": "4.0.*",
 		"fzaninotto/faker": "~1.4",
 		"pusher/pusher-php-server": "~2.0",
-		"predis/predis": "~1.0"
+		"predis/predis": "~1.0",
+		"google/appengine-php-sdk": "~1.0"
 	},
 	"require-dev":
 	{
