--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,10 @@
 
-#test:
-#  script:
-#    - npm run prepare-gitlab-build
-#    - npm test
+before_script:
+  - apt-get update -qy
+  - apt-get install -y python-dev python-pip
+  - pip install -r requirements.txt
 
-buildandroid:
+test:
+  image: python:2.7
   script:
-    - npm run build-android-production -- -v
-
-buildios:
-  script:
-    - npm run build-ios-production -- -v
-
-cache:
-  paths:
-    - node_modules/
+  - python setup.py test
