--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,20 @@
 
-test:
+test:2.7:
   image: python:2.7
+  script:
+  - python setup.py test
+
+test:3.3:
+  image: python:3.3
+  script:
+  - python setup.py test
+
+test:3.4:
+  image: python:3.4
+  script:
+  - python setup.py test
+
+test:3.5:
+  image: python:3.5
   script:
   - python setup.py test
