--- a/setup.config.ini
+++ b/setup.config.ini
@@ -29,3 +29,13 @@ suite: nose.collector
 
 [Packages]
 include: edmunds*
+
+[Commands]
+docs_install: ./bin/gitbook/install.sh
+docs_install-description: Install GitBook on system
+docs_watch: ./bin/gitbook/serve.sh
+docs_watch-description: Serve GitBook server and watcher
+docs_build: ./bin/gitbook/build.sh
+docs_build-description: Build GitBook
+docs_publish:  ./bin/gitbook/publish.sh git@gitlab.com:LowieHuyghe/edmunds.git gh-pages
+docs_publish-description: Publish GitBook to GitHub Pages
