--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,9 @@ test:3.6:
 pages:
   stage: deploy
   image: python:2.7
+  before_script:
+  - sudo apt-get install nodejs
+  - sudo apt-get install npm
   script:
   - python setup.py docs_build
   artifacts:
