#158: Trying other possible setup to install nodejs and npm.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,8 +23,9 @@ pages:
   stage: deploy
   image: python:2.7
   before_script:
-  - apt-get install nodejs
-  - apt-get install npm
+  - apt-get update
+  - apt-get -qq update
+  - apt-get install -y nodejs npm
   script:
   - python setup.py docs_build
   artifacts:
