--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,8 @@ pages:
   image: python:2.7
   before_script:
   - apt-get update
-  - apt-get -qq update
   - apt-get install -y nodejs npm
+  - ln -s /usr/bin/nodejs /usr/bin/node
   script:
   - python setup.py docs_build
   artifacts:
