#158: Changed license to Apache 2.0

--- a/setup.config.ini
+++ b/setup.config.ini
@@ -5,7 +5,7 @@ version: 0.3.0
 description: Edmunds is a fast Python framework for building web applications with a firm base to start from.
 long_description: file://README.md
 url: https://gitlab.com/LowieHuyghe/edmunds
-license: Proprietary License
+license: Apache-2.0
 keywords: script, core, development
 requirements: file://requirements.txt
 
@@ -18,7 +18,7 @@ status: 3
 programming_languages: Python 2, Python 2.7, Python 3, Python 3.4, Python 3.5, Python 3.6
 audiences: Developers
 topics: Application Frameworks
-license: Proprietary License
+license: Apache
 
 [Setup]
 requirements: setuptools_scm
