--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,7 @@ dependencies:
     - ~/virtualenvs/venv-3.5/bin/pip install -r requirements.txt
     - ~/virtualenvs/venv-3.6/bin/pip install -r requirements.txt
 
+    - pip install coverage
     - pip install codecov
 
 test:
