--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,11 @@ dependencies:
     - ~/virtualenvs/venv-3.5/bin/pip install -r requirements.txt
     - ~/virtualenvs/venv-3.6/bin/pip install -r requirements.txt
 
-    - pip install coverage
+    - ~/virtualenvs/venv-2.7/bin/pip install coverage
+    - ~/virtualenvs/venv-3.4/bin/pip install coverage
+    - ~/virtualenvs/venv-3.5/bin/pip install coverage
+    - ~/virtualenvs/venv-3.6/bin/pip install coverage
+
     - pip install codecov
 
 test:
