--- a/setup.config.ini
+++ b/setup.config.ini
@@ -4,7 +4,7 @@ name: edmunds
 version: 0.3.0
 description: Edmunds is a fast Python framework for building web applications with a firm base to start from.
 long_description: file://README.md
-url: https://gitlab.com/LowieHuyghe/edmunds
+url: https://github.com/LowieHuyghe/edmunds
 license: Apache-2.0
 keywords: script, core, development
 requirements: file://requirements.txt
@@ -37,5 +37,5 @@ docs_watch: ./bin/gitbook/serve.sh
 docs_watch-description: Serve GitBook server and watcher
 docs_build: ./bin/gitbook/build.sh
 docs_build-description: Build GitBook
-docs_publish:  ./bin/gitbook/publish.sh git@gitlab.com:LowieHuyghe/edmunds.git gh-pages
+docs_publish:  ./bin/gitbook/publish.sh git@github.com:LowieHuyghe/edmunds.git gh-pages
 docs_publish-description: Publish GitBook to GitHub Pages
