CircleCI: Coverage should look for edmunds.

--- a/circle.yml
+++ b/circle.yml
@@ -28,10 +28,10 @@ dependencies:
 
 test:
   override:
-    - ~/virtualenvs/venv-2.7/bin/coverage run --source=scriptcore setup.py test
-    - ~/virtualenvs/venv-3.4/bin/coverage run --source=scriptcore setup.py test
-    - ~/virtualenvs/venv-3.5/bin/coverage run --source=scriptcore setup.py test
-    - ~/virtualenvs/venv-3.6/bin/coverage run --source=scriptcore setup.py test
+    - ~/virtualenvs/venv-2.7/bin/coverage run --source=edmunds setup.py test
+    - ~/virtualenvs/venv-3.4/bin/coverage run --source=edmunds setup.py test
+    - ~/virtualenvs/venv-3.5/bin/coverage run --source=edmunds setup.py test
+    - ~/virtualenvs/venv-3.6/bin/coverage run --source=edmunds setup.py test
 
   post:
     - codecov
