--- a/circle.yml
+++ b/circle.yml
@@ -27,8 +27,8 @@ dependencies:
     - pip install codecov
 
     - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components install app-engine-python
-    - export PYTHONPATH="$PYTHONPATH:/opt/google-cloud-sdk/platform/google_appengine"
-    - export PYTHONPATH="$PYTHONPATH:/opt/google-cloud-sdk/platform/google_appengine/lib/yaml/lib"
+    - echo 'export PYTHONPATH="$PYTHONPATH:/opt/google-cloud-sdk/platform/google_appengine"' >> ~/.circlerc
+    - echo 'export PYTHONPATH="$PYTHONPATH:/opt/google-cloud-sdk/platform/google_appengine/lib/yaml/lib"' >> ~/.circlerc
 
 test:
   override:
