#21: Fixing coverage only picking up coverage of last test-run.

--- a/circle.yml
+++ b/circle.yml
@@ -33,9 +33,9 @@ dependencies:
 test:
   override:
     - ~/virtualenvs/venv-2.7/bin/coverage run --source=edmunds setup.py test
-    - ~/virtualenvs/venv-3.4/bin/coverage run --source=edmunds setup.py test
-    - ~/virtualenvs/venv-3.5/bin/coverage run --source=edmunds setup.py test
-    - ~/virtualenvs/venv-3.6/bin/coverage run --source=edmunds setup.py test
+    - ~/virtualenvs/venv-3.4/bin/coverage run --append --source=edmunds setup.py test
+    - ~/virtualenvs/venv-3.5/bin/coverage run --append --source=edmunds setup.py test
+    - ~/virtualenvs/venv-3.6/bin/coverage run --append --source=edmunds setup.py test
 
   post:
     - codecov
