--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,9 @@ machine:
     - "[ -d ~/virtualenvs/venv-3.5 ] || virtualenv -p $( which python3.5 ) ~/virtualenvs/venv-3.5"
     - "[ -d ~/virtualenvs/venv-3.6 ] || virtualenv -p $( which python3.6 ) ~/virtualenvs/venv-3.6"
 
+  environment:
+    - PYTHONPATH: /opt/google-cloud-sdk/platform/google_appengine:/opt/google-cloud-sdk/platform/google_appengine/lib/yaml/lib
+
 dependencies:
   override:
     - ~/virtualenvs/venv-2.7/bin/pip install -r requirements.txt
@@ -27,8 +30,6 @@ dependencies:
     - pip install codecov
 
     - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components install app-engine-python
-    - echo 'export PYTHONPATH="$PYTHONPATH:/opt/google-cloud-sdk/platform/google_appengine"' >> ~/.circlerc
-    - echo 'export PYTHONPATH="$PYTHONPATH:/opt/google-cloud-sdk/platform/google_appengine/lib/yaml/lib"' >> ~/.circlerc
 
 test:
   override:
