--- a/circle.yml
+++ b/circle.yml
@@ -13,9 +13,12 @@ machine:
     - "[ -d ~/virtualenvs/venv-3.6 ] || virtualenv -p $( which python3.6 ) ~/virtualenvs/venv-3.6"
 
   environment:
-    - PYTHONPATH: /opt/google-cloud-sdk/platform/google_appengine:/opt/google-cloud-sdk/platform/google_appengine/lib/yaml/lib
+    PYTHONPATH: /opt/google-cloud-sdk/platform/google_appengine:/opt/google-cloud-sdk/platform/google_appengine/lib/yaml/lib
 
 dependencies:
+  cache_directories:
+    - /opt/google-cloud-sdk
+
   override:
     - ~/virtualenvs/venv-2.7/bin/pip install -r requirements.txt
     - ~/virtualenvs/venv-3.4/bin/pip install -r requirements.txt
@@ -29,6 +32,7 @@ dependencies:
 
     - pip install codecov
 
+    - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update
     - sudo /opt/google-cloud-sdk/bin/gcloud --quiet components install app-engine-python
 
 test:
