--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ machine:
 dependencies:
   cache_directories:
     - /opt/google-cloud-sdk
-    - node_modules
+    - /opt/circleci/nodejs/v4.2.6/lib/node_modules
 
   override:
     - ~/virtualenvs/venv-2.7/bin/pip install -r requirements.txt
