--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ Flask==0.12.2
 google-api-python-client==1.6.2
 GoogleAppEngineCloudStorageClient==1.9.22.1
 pyprof2calltree==1.4.0
+Flask-WTF==0.14.2
