--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ google-api-python-client==1.6.2
 GoogleAppEngineCloudStorageClient==1.9.22.1
 pyprof2calltree==1.4.1
 Flask-WTF==0.14.2
+Flask-SQLAlchemy==2.2
+mysqlclient==1.3.10
