--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ google-api-python-client==1.6.2
 GoogleAppEngineCloudStorageClient==1.9.22.1
 pyprof2calltree==1.4.1
 Flask-WTF==0.14.2
-Flask-SQLAlchemy==2.2
+# Fix Flask-SQLAlchemy to 2.1 instead of 2.2 because of https://github.com/mitsuhiko/flask-sqlalchemy/issues/478
+Flask-SQLAlchemy==2.1
 mysqlclient==1.3.10
 psycopg2==2.7.1
 Flask-Script==2.0.5
