--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ coverage==4.4.1
 Flask-Migrate==2.1.1
 user-agents==1.1.0
 geoip2==2.5.0
-timezonefinder==2.1.0
+timezonefinderL==2.0.1
 Babel==2.5.1
 redis==2.10.6
 python-memcached==1.58
