--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,48 @@ jobs:
               . venv/bin/activate
               coverage run --append --source=app setup.py test
 
+  test-3.4:
+      docker:
+        - image: lowieh/docker-python-gcp:3.4
+      steps:
+        - checkout
+        - restore_cache:
+            key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
+        - run:
+            command: |
+              python -m venv venv
+              . venv/bin/activate
+              pip install -r requirements.txt
+        - save_cache:
+            key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
+            paths:
+              - "venv"
+        - run:
+            command: |
+              . venv/bin/activate
+              coverage run --append --source=app setup.py test
+
+  test-3.5:
+      docker:
+        - image: lowieh/docker-python-gcp:3.5
+      steps:
+        - checkout
+        - restore_cache:
+            key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
+        - run:
+            command: |
+              python -m venv venv
+              . venv/bin/activate
+              pip install -r requirements.txt
+        - save_cache:
+            key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
+            paths:
+              - "venv"
+        - run:
+            command: |
+              . venv/bin/activate
+              coverage run --append --source=app setup.py test
+
   test-3.6:
       docker:
         - image: lowieh/docker-python-gcp:3.6
@@ -58,6 +100,14 @@ workflows:
   test-2.7:
     jobs:
       - test-2.7
+
+  test-3.4:
+    jobs:
+      - test-3.4
+
+  test-3.5:
+    jobs:
+      - test-3.5
 
   test-3.6:
     jobs:
