--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,18 +99,9 @@ jobs:
 workflows:
   version: 2
 
-  test-2.7:
+  test:
     jobs:
       - test-2.7
-
-  test-3.4:
-    jobs:
       - test-3.4
-
-  test-3.5:
-    jobs:
       - test-3.5
-
-  test-3.6:
-    jobs:
       - test-3.6
