--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
             command: |
               python -m virtualenv venv
               . venv/bin/activate
+              pip install codecov
               pip install -r requirements.txt
         - save_cache:
             key: deps-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -22,6 +23,10 @@ jobs:
             command: |
               . venv/bin/activate
               coverage run --append --source=app setup.py test
+        - run:
+            command: |
+              . venv/bin/activate
+              codecov --required
 
   test-3.4:
       docker:
@@ -34,6 +39,7 @@ jobs:
             command: |
               python -m venv venv
               . venv/bin/activate
+              pip install codecov
               pip install -r requirements.txt
         - save_cache:
             key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -43,6 +49,10 @@ jobs:
             command: |
               . venv/bin/activate
               coverage run --append --source=app setup.py test
+        - run:
+            command: |
+              . venv/bin/activate
+              codecov --required
 
   test-3.5:
       docker:
@@ -55,6 +65,7 @@ jobs:
             command: |
               python -m venv venv
               . venv/bin/activate
+              pip install codecov
               pip install -r requirements.txt
         - save_cache:
             key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -64,6 +75,10 @@ jobs:
             command: |
               . venv/bin/activate
               coverage run --append --source=app setup.py test
+        - run:
+            command: |
+              . venv/bin/activate
+              codecov --required
 
   test-3.6:
       docker:
@@ -78,6 +93,7 @@ jobs:
               . venv/bin/activate
               # Update setuptools to avoid this issue: https://github.com/linsomniac/python-memcached/issues/103
               pip install -U setuptools
+              pip install codecov
               pip install -r requirements.txt
         - save_cache:
             key: deps-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
@@ -87,13 +103,10 @@ jobs:
             command: |
               . venv/bin/activate
               coverage run --append --source=app setup.py test
-
-  codecov:
-      docker:
-        - image: lowieh/docker-python-gcp:3.6
-      steps:
-        - run: pip install codecov
-        - run: codecov --required --commit $CIRCLE_SHA1 --branch $CIRCLE_BRANCH --build $CIRCLE_BUILD_NUM
+        - run:
+            command: |
+              . venv/bin/activate
+              codecov --required
 
 
 workflows:
@@ -105,9 +118,3 @@ workflows:
       - test-3.4
       - test-3.5
       - test-3.6
-      - codecov:
-          requires:
-            - test-2.7
-            - test-3.4
-            - test-3.5
-            - test-3.6
