--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
         - run:
             command: |
               . venv/bin/activate
-              coverage run --append --source=app setup.py test
+              python setup.py test --with-coverage --cover-erase --cover-package=edmunds
         - run:
             command: |
               . venv/bin/activate
@@ -48,7 +48,7 @@ jobs:
         - run:
             command: |
               . venv/bin/activate
-              coverage run --append --source=app setup.py test
+              python setup.py test --with-coverage --cover-erase --cover-package=edmunds
         - run:
             command: |
               . venv/bin/activate
@@ -74,7 +74,7 @@ jobs:
         - run:
             command: |
               . venv/bin/activate
-              coverage run --append --source=app setup.py test
+              python setup.py test --with-coverage --cover-erase --cover-package=edmunds
         - run:
             command: |
               . venv/bin/activate
@@ -102,7 +102,7 @@ jobs:
         - run:
             command: |
               . venv/bin/activate
-              coverage run --append --source=app setup.py test
+              python setup.py test --with-coverage --cover-erase --cover-package=edmunds
         - run:
             command: |
               . venv/bin/activate
