--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,6 +108,17 @@ jobs:
               . venv/bin/activate
               codecov --required
 
+  update-docs:
+      filters:
+        branches:
+          only: master
+      docker:
+        - image: lowieh/docker-python-gcp:3.6
+      steps:
+        - checkout
+        - run: pip install mkdocs
+        - deploy: mkdocs gh-deploy
+
 
 workflows:
   version: 2
@@ -118,3 +129,9 @@ workflows:
       - test-3.4
       - test-3.5
       - test-3.6
+      - update-docs:
+          requires:
+            - test-2.7
+            - test-3.4
+            - test-3.5
+            - test-3.6
