--- a/.circleci/gh-pages.config.yml
+++ b/.circleci/gh-pages.config.yml
@@ -5,5 +5,7 @@ jobs:
     filters:
       branches:
         ignore: gh-pages
+    docker:
+      - image: python:3.6
     steps:
       - run: echo "ignore me"
