--- a/.circleci/gh-pages.config.yml
+++ b/.circleci/gh-pages.config.yml
@@ -1,11 +1,20 @@
 version: 2
 
 jobs:
-  build:
-    filters:
-      branches:
-        ignore: gh-pages
+
+  ignore-me:
     docker:
       - image: python:3.6
     steps:
       - run: echo "ignore me"
+
+
+workflows:
+  version: 2
+
+  ignore-me:
+    jobs:
+      - ignore-me:
+          filters:
+            branches:
+              ignore: gh-pages
