Use scm versioning

--- a/setup.config.ini
+++ b/setup.config.ini
@@ -1,7 +1,7 @@
 
 [General]
 name: edmunds
-version: 0.3.0
+version: scm
 description: Edmunds is a fast Python framework for building web applications with a firm base to start from.
 long_description: file://README.md
 url: https://github.com/LowieHuyghe/edmunds
