--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
             python -m virtualenv venv
             . venv/bin/activate
             pip install codecov
-            python setup.py install
+            pip install -r requirements.txt
       - save_cache:
           key: deps-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
@@ -40,7 +40,7 @@ jobs:
             python -m venv venv
             . venv/bin/activate
             pip install codecov
-            python setup.py install
+            pip install -r requirements.txt
       - save_cache:
           key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
@@ -66,7 +66,7 @@ jobs:
             python -m venv venv
             . venv/bin/activate
             pip install codecov
-            python setup.py install
+            pip install -r requirements.txt
       - save_cache:
           key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
@@ -94,7 +94,7 @@ jobs:
             # Update setuptools to avoid this issue: https://github.com/linsomniac/python-memcached/issues/103
             pip install -U setuptools
             pip install codecov
-            python setup.py install
+            pip install -r requirements.txt
       - save_cache:
           key: deps-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
