#38: Changed name of package to add it to pypi

--- a/setup.config.ini
+++ b/setup.config.ini
@@ -1,6 +1,6 @@
 
 [General]
-name: edmunds
+name: edmunds-framework
 version: scm
 description: Edmunds is a fast Python framework for building web applications with a firm base to start from.
 long_description: file://README.md
