#38: Integrate pandoc in ci.

--- a/setup.config.ini
+++ b/setup.config.ini
@@ -21,7 +21,7 @@ topics: Application Frameworks
 license: Apache
 
 [Setup]
-requirements: setuptools_scm
+requirements: setuptools_scm, pandoc
 
 [Tests]
 requirements: mock, nose
