--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,11 @@ jobs:
       - image: python:3.6
     steps:
       - checkout
-      - run: pip install setuptools_scm twine
+      - run:
+          command: |
+            apt-get update
+            apt-get install -y pandoc
+      - run: pip install setuptools_scm pandoc twine
       - run:
           command: |
             rm -rf dist
