--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - image: lowieh/docker-python-gcp:2.7
     steps:
       - checkout
+#     Test edmunds in python 2.7
       - restore_cache:
           key: deps-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
@@ -23,6 +24,31 @@ jobs:
           command: |
             . venv/bin/activate
             coverage run --source=edmunds setup.py test
+#     Test edmunds-instance in python 2.7
+      - run:
+          command: |
+            git submodule sync
+            git submodule update --init --recursive
+      - run: cd "$CIRCLE_WORKING_DIRECTORY/edmunds-instance"
+      - restore_cache:
+          key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
+      - run:
+          command: |
+            pwd
+            python -m virtualenv venv-instance
+            . venv-instance/bin/activate
+            pip install -r requirements.txt
+      - save_cache:
+          key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          paths:
+            - "venv-instance"
+      - run:
+          command: |
+            pwd
+            . venv-instance/bin/activate
+            python manage.py test
+      - run: cd "$CIRCLE_WORKING_DIRECTORY/edmunds-instance"
+#     Send results to codecov in python 2.7
       - run:
           command: |
             . venv/bin/activate
