--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,11 @@ jobs:
           command: |
             git submodule sync
             git submodule update --init --recursive
-      - run: cd "$CIRCLE_WORKING_DIRECTORY/edmunds-instance"
+      - run:
+          command: |
+            pwd
+            ls
+            cd "$CIRCLE_WORKING_DIRECTORY/edmunds-instance"
       - restore_cache:
           key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
