--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,54 +177,28 @@ jobs:
 workflows:
   version: 2
 
-  test:
-    jobs:
-      - test-2.7
-      - test-3.4
-      - test-3.5
-      - test-3.6
-      - update-docs:
-          filters:
-            branches:
-              only: master
-          requires:
-            - test-2.7
-            - test-3.4
-            - test-3.5
-            - test-3.6
-
-  deploy:
+  flow:
     jobs:
       - test-2.7:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
       - test-3.4:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
       - test-3.5:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
       - test-3.6:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
       - update-docs:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
-            branches:
-              ignore: /.*/
           requires:
             - test-2.7
             - test-3.4
