--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,24 +29,23 @@ jobs:
           command: |
             git submodule sync
             git submodule update --init --recursive
-      - run: cd edmunds-instance
       - restore_cache:
           key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
-            pwd
-            python -m virtualenv venv-instance
-            . venv-instance/bin/activate
+            cd edmunds-instance
+            python -m virtualenv venv
+            . venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
           key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv-instance"
+            - "edmunds-instance/venv"
       - run:
           command: |
-            . venv-instance/bin/activate
+            cd edmunds-instance
+            . venv/bin/activate
             python manage.py test
-      - run: cd ..
 #     Send results to codecov in python 2.7
       - run:
           command: |
