--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             git submodule sync
             git submodule update --init --recursive
       - restore_cache:
-          key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
       - run:
           command: |
             cd edmunds-instance
@@ -38,7 +38,7 @@ jobs:
             . venv/bin/activate
             pip install -r requirements.txt
       - save_cache:
-          key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: deps-instance-test-2.7-{{ .Branch }}-{{ checksum "edmunds-instance/requirements.txt" }}
           paths:
             - "edmunds-instance/venv"
       - run:
