#38: Setup should be in package

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,13 +8,11 @@ prune .eggs
 prune build
 prune dist
 prune edmunds-instance
-prune setup
 prune site
 prune storage
 prune tests
 exclude .*
 exclude MANIFEST.in
 exclude mkdocs.yml
-exclude setup.cfg
-exclude setup.config.ini
-exclude setup.py
+exclude setup/.*
+exclude setup/*.example.*
