--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,6 +217,8 @@ workflows:
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
+            branches:
+              only: master
           requires:
             - test-2.7
             - test-3.4
