--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - save_cache:
           key: deps-test-2.7-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - venv
       - run:
           command: |
             . venv/bin/activate
@@ -57,7 +57,7 @@ jobs:
       - save_cache:
           key: deps-test-3.4-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - venv
       - run:
           command: |
             . venv/bin/activate
@@ -95,7 +95,7 @@ jobs:
       - save_cache:
           key: deps-test-3.5-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - venv
       - run:
           command: |
             . venv/bin/activate
@@ -135,7 +135,7 @@ jobs:
       - save_cache:
           key: deps-test-3.6-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
-            - "venv"
+            - venv
       - run:
           command: |
             . venv/bin/activate
