#73: Improved circle config. Added GitLab CI config.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,23 +200,23 @@ workflows:
       - test-2.7:
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only: /^v[0-9]+(\.[0-9]+)*$/
       - test-3.4:
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only: /^v[0-9]+(\.[0-9]+)*$/
       - test-3.5:
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only: /^v[0-9]+(\.[0-9]+)*$/
       - test-3.6:
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only: /^v[0-9]+(\.[0-9]+)*$/
       - update-docs:
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only: /^v[0-9]+(\.[0-9]+)*$/
             branches:
               only: master
           requires:
@@ -227,7 +227,7 @@ workflows:
       - deploy-to-pypi:
           filters:
             tags:
-              only: /v[0-9]+(\.[0-9]+)*/
+              only: /^v[0-9]+(\.[0-9]+)*$/
             branches:
               ignore: /.*/
           requires:
