Circle CI: Don't deploy docs when pushing to master. Only on tags.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -218,7 +218,7 @@ workflows:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*$/
             branches:
-              only: master
+              ignore: /.*/
           requires:
             - test-2.7
             - test-3.4
